<resources>
    <string name="app_name">Z-Health</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="return_to_your_wellness_space">Return to Your Wellness Space</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_your_password_again">Enter Your Password Again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_date_of_birth">Enter Your Date of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_fullname">Enter Your Fullname</string>
    <string name="fullname">Fullname</string>
    <string name="wellnes_journey">Wellnes Journey</string>
    <string name="start_your">Start Your</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="journal">Journal</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="_2_jam">: 2 Jam</string>
    <string name="_12_12_2020">12/12/2020</string>
    <string name="jam_belajar">Jam Belajar</string>
    <string name="jam_ekstrakulikuler">Jam Ekstrakulikuler</string>
    <string name="jam_tidur">Jam Tidur</string>
    <string name="jam_sosial">Jam Sosial</string>
    <string name="jam_aktifitas_fisik">Jam Aktifitas Fisik</string>
    <string name="my">My</string>
    <string name="logout">Logout</string>
    <string name="andi_sugara">Andi Sugara</string>
    <string name="sugaraandi9_gmail_com">sugaraandi9@gmail.com</string>
    <string name="healing_isn_t_about_changing_who_you_are">Healing isn’t about changing who you are</string>
    <string name="joural_hari_ini">Journal Hari Ini</string>
    <string name="isi_jurnal">Isi Jurnal</string>
    <string name="anda_belum_mengisi_jurnal_hari_ini">Anda Belum Mengisi Jurnal Hari Ini</string>
    <string name="belajar">belajar</string>
    <string name="ekstrakurikuler">Ekstrakurikuler</string>
    <string name="tidur">Tidur</string>
    <string name="aktifitas_fisik">Aktifitas Fisik</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="rekomendasi_untukmu">Rekomendasi Kegiatan Untuk Anda</string>
    <string name="perbanyak_olahraga">Perbanyak Olahraga</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="buat">Buat</string>
    <string name="catatan">Catatan</string>
    <string name="simpan">Simpan</string>
    <string name="belum_ada_rekomendasi_untukmu">Belum ada rekomendasi untukmu</string>
    <string name="loading">Loading...</string>
    <string name="belum_ada_riwayat_mood">Belum ada riwayat mood</string>
    <string name="rekomendasi">Rekomendasi Untukmu\n</string>
    <string name="tidak_ada_data">Tidak ada Data</string>
    <string name="select_image">Edit Photo\n</string>
    <string name="save_changes">Save Changes</string>
    <string name="dont_want_to_change">Dont want to change?</string>
    <string name="cancel">Cancel</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="recommendation_icon">Ini Rekomendasi</string>
    <string name="icon_description">Ini Deskripsi</string>
    <string name="_1_januari_2024">Tanggal\n</string>
    <string name="lakukan_olahraga_seperti_bermain_sepak_bola_badminton_dll">Deskripsi</string>
    <string name="phone_number">Number Phone</string>
    <string name="enter_your_phone_number">Enter your number phone</string>



        <string name="category_high">High</string>
        <string name="category_moderate">Moderate</string>
        <string name="category_low">Low</string>

</resources>