<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_your"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsbold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellnes_journey"
            android:textSize="30sp"
            android:fontFamily="@font/poppinsbold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_fullname"
            android:inputType="text"
            android:id="@+id/et_fullname"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:id="@+id/et_email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_date_of_birth"
            android:inputType="date"
            android:id="@+id/et_date"
            android:focusable="false"
            android:focusableInTouchMode="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:id="@+id/et_password"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_selector"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_password_again"
            android:inputType="textPassword"
            android:id="@+id/et_confirmpassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_register"
            android:background="@drawable/button_background"
            android:stateListAnimator="@null"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="5dp"
                android:textColor="@color/primary"
                android:id="@+id/tv_login"
                />
        </LinearLayout>
    </LinearLayout>






</ScrollView>