<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.profile.ProfileEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        android:padding="20dp">

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- Profile Image Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civProfileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/d_avatar_10"
                app:civ_border_color="@color/primary"
                app:civ_border_width="2dp" />

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:background="@drawable/button_background"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Full Name Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_fullname"
            android:textColor="@color/black"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_fullname"
            android:background="@drawable/input_selector"
            android:inputType="text" />

        <!-- Email Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email"
            android:textColor="@color/black"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:background="@drawable/input_selector"
            android:inputType="textEmailAddress" />

        <!-- Password Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:background="@drawable/input_selector"
            android:inputType="textPassword" />

        <!-- Save Changes Button -->
        <Button
            android:id="@+id/btn_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginTop="20dp" />

        <!-- Cancel Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_want_to_change"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/primary"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
